[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
ndarray = "0.15.3"
approx = "0.5.0"
ordered-float = "2.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3