[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
ndarray = "0.15.3"
approx = "0.5.0"
ordered-float = "2.0"
image = "0.22.3"
regex = "1.5.4"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3